# nu_plugin_pipe

./: Cargo.toml  README.md
src/: main.rs  pipe_arg.rs
src/cmds/: drop.rs  get_pipe.rs  list.rs  mod.rs  new.rs  read.rs  recv.rs  write.rs
