[package]
name = "nu_plugin_pipe"
version = "0.0.1+0.113.1"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
nu-plugin = "0.113.1"
nu-protocol = { version = "0.113.1", features = ["plugin", "rmp-serde"] }
petname = "3.0.0"
rand = "0.10.1"
serde = "1.0.228"
tap = "1.0.1"
thiserror = "2.0.18"
uuid = { version = "1.23.3", features = ["v4", "rng-rand", "serde", "sha1"] }
