[package]
name = "nu_plugin_pipe"
version = "0.0.1+0.113.1"
edition = "2024"
description = "Its a simple nu plugin that creates and manages simple named pipes. These pipes won't die at the end of the command like the vanilla nu pipe operator, which means you can use them as outputs or stuff like that for more sophisticated logic. "
homepage = "https://github.com/artpeixoto/nu_plugin_pipe"
license = "MIT OR Apache-2.0"



[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
nu-plugin = "0.113.1"
nu-protocol = { version = "0.113.1", features = ["plugin", "rmp-serde"] }
petname = "3.0.0"
rand = "0.10.1"
serde = "1.0.228"
tap = "1.0.1"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync"] }

[features]
testing = []